[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/interface/default/button_large_normal.png" type="Texture" id=1]
[ext_resource path="res://graphics/interface/default/button_large_pressed.png" type="Texture" id=2]
[ext_resource path="res://graphics/interface/default/button_large_grayed.png" type="Texture" id=3]
[ext_resource path="res://scripts/button.gd" type="Script" id=4]
[ext_resource path="res://scenes/text_with_shadow.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/button_audio_player.tscn" type="PackedScene" id=6]

[node name="large_button" type="TextureButton"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 224.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Rect", "Textures", "Theme" ]
button_text = ""

[node name="button_text" parent="." instance=ExtResource( 5 )]

margin_top = 4.0
margin_bottom = 28.0

[node name="button_audio_player" parent="." instance=ExtResource( 6 )]

[connection signal="mouse_entered" from="." to="." method="display_text_hovered"]

[connection signal="mouse_exited" from="." to="." method="display_text_not_hovered"]

[connection signal="pressed" from="." to="button_audio_player" method="play"]


